python_app/kubernetes_files/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
   name: python-app-deployment
spec:
   replicas: 1
   selector:
      matchLabels: 
         app: python-app
   template:
      metadata:
         labels:
           app: python-app
      spec:
         imagePullSecrets:
         - name: ecr-auth-secret
         containers:
         - name: python-app
           image: ""
           ports:
           - containerPort: 5000
           resources: 
             requests:
               memory: "128Mi"
               cpu: "100m"
             limits:
               memory: "256Mi"
               cpu: "200m"
           readinessProbe:
                httpGet:
                  path: /health
                  port: 5000
                initialDelaySeconds: 5
                periodSeconds: 5
                failureThreshold: 3
