python_app/kubernetes_files/app-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: app-service
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
